# Four_fish_school

./: FlappingFoilKinematics.cpp  FlappingFoilKinematics.h  IMPLEMENTATION_SUMMARY.md  PRODUCTION_PRECHECK.md  QUICKSTART_LEI_ODOR_PLUME.md  README.md  README_LEI_ODOR_PLUME_NAVIGATION.md  README_REPOSITORY_STRUCTURE.md  REFERENCES.md  analyze_odor_plume_lei.py  example.cpp  generate_foil_geometry.py  input2d  input2d_lei_odor_plume
CPP_IBAMR_Baseline/: README.md  main.cpp
IBAMR_CPP_Tests/: CMakeLists.txt  README.md
IBAMR_CPP_Tests/Test02_Diffusion_Analytic/: main.cpp
IBAMR_CPP_Tests/Test03_Advection_Analytic/: input2d  main.cpp
IBAMR_CPP_Tests/Test04_MMS/: main.cpp
IBAMR_CPP_Tests/Test05_Discontinuous/: input2d  main.cpp
IBAMR_CPP_Tests/Test06_MassConservation/: main.cpp
IBAMR_CPP_Tests/Test07_BCs/: main.cpp
IBAMR_CPP_Tests/Test08_SphereSource/: main.cpp
IBAMR_CPP_Tests/Test09_HighSc/: main.cpp
IBAMR_CPP_Tests/Test10_MovingIB/: input2d  main.cpp
IBAMR_CPP_Tests/Test11_AMR/: input2d  main.cpp
IBAMR_CPP_Tests/Test12_TimeStep/: main.cpp
IBAMR_CPP_Tests/Test13_LongRun/: main.cpp
IBAMR_CPP_Tests/Test14_Benchmarks/: main.cpp
Python_Odor_Dynamics/: README.md
VV_Tests/: FINAL_SUMMARY.md  QUICK_START.md  README.md  VV_CHECKLIST_IMPLEMENTATION_GUIDE.md  create_all_tests.py  run_all_tests.sh
VV_Tests/Analysis_Scripts/: master_analysis.py
VV_Tests/Test01_SmokeTest/: CMakeLists.txt  README.md  analyze.py  input2d  run_test.sh  test01_scalar_only.cpp
python/: analyze_odor_plumes.py  generate_4fish_vertices.py  plot_odor_concentration.py
(+16 files in other folders)
